--- a/backend_base/myproject/cinema/templates/home.html
+++ b/backend_base/myproject/cinema/templates/home.html
@@ -165,8 +165,8 @@
         fetch("/api/logout/", {
             method: "POST",
             headers: {
-                "Content-Type": "application/json",
-                Authorization: `Bearer ${access}`,
+                "Content-Type": "application/json"
+
             },
             body: JSON.stringify({ refresh }),
         })
