--- a/backend_base/myproject/cinema/templates/content_detail.html
+++ b/backend_base/myproject/cinema/templates/content_detail.html
@@ -223,14 +223,18 @@
 
 
 
-    <div class="header-bar">
-        <div class="header-content">
-            <div class="username">{{ username }}</div>
-            <div class="user-avatar"></div>
-
-            <button id="logout-button">Выйти</button>
-        </div>
+<div class="header-bar">
+    <div class="header-content">
+        <div class="username">{{ username }}</div>
+        <div class="user-avatar"></div>
+        <form method="post" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button type="submit">Выйти</button>
+        </form>
     </div>
+</div>
+
+
 
 
 
@@ -352,38 +356,7 @@
 
 
 
-    <script>
-    const access = "{{ access_token }}";
-    const refresh = "{{ refresh_token }}";
 
-    document.getElementById("logout-button").addEventListener("click", function () {
-        if (!refresh || !access) {
-            alert("Вы уже вышли или не авторизованы.");
-            window.location.href = "/login/";
-            return;
-        }
-
-        fetch("/api/logout/", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-
-            },
-            body: JSON.stringify({ refresh }),
-        })
-        .then((response) => {
-            if (response.status === 205) {
-                alert("Вы успешно вышли.");
-                window.location.href = "/login/";
-            } else {
-                alert("Ошибка при выходе.");
-            }
-        })
-        .catch((error) => {
-            console.error("Ошибка:", error);
-        });
-    });
-</script>
 
 
 
