--- a/backend_base/myproject/cinema/templates/home.html
+++ b/backend_base/myproject/cinema/templates/home.html
@@ -11,105 +11,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Кинотеатр</title>
-    <style>
 
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
 
-
-
-
-        .header-bar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 60px;
-            background-color: #ffffff;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-            border-bottom-left-radius: 16px;
-            border-bottom-right-radius: 16px;
-            z-index: 1000;
-        }
-
-        .header-content {
-            height: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            padding: 0 20px;
-            gap: 10px;
-        }
-
-        .username {
-            font-weight: bold;
-            font-size: 16px;
-            color: #333;
-        }
-
-        .user-avatar {
-            width: 40px;
-            height: 40px;
-            background-color: #ccc;
-            border-radius: 50%;
-        }
-
-        .logout-button {
-            background-color: #f44336;
-            color: white;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 8px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-
-
-
-
-        body {
-            padding: 40px;
-            padding-top: 100px;
-            font-family: sans-serif;
-
-            background-color: #f0f0f0;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-        }
-        .card {
-            background-color: white;
-            border-radius: 12px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            text-decoration: none;
-            color: inherit;
-        }
-        .card img {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-        }
-        .card-body {
-            padding: 15px;
-        }
-        .card-title {
-            font-size: 20px;
-            font-weight: bold;
-        }
-        .card-info {
-            margin-top: 10px;
-            font-size: 14px;
-            color: #555;
-
-
-        }
-    </style>
 </head>
 <body>
 
