Добавлен финальный отчёт

--- a/backend_base/myproject/cinema/templates/content_detail.html
+++ b/backend_base/myproject/cinema/templates/content_detail.html
@@ -75,6 +75,7 @@
                         <div class="avatar"></div>
                         <strong>{{ username }}</strong>
                     </div>
+                    <input type="number" name="id" value="{{ content.id }}">
                     <textarea name="text" rows="5" placeholder="Напишите отзыв..." required></textarea>
                     <div class="form-bottom">
                         <label>Оценка:
